# SRCR_Ind

./: README.md  a_star.pl  adjacencias.pl  dijkstra.pl  lists.pl  main.pl  main2.pl  paragens.pl
csvtopl/: README.md  csvtopl.cabal  stack.yaml
csvtopl/.stack-work/: stack.sqlite3
csvtopl/.stack-work/ghci/0eef693a/: cabal_macros.h
csvtopl/.stack-work/ghci/164f3925/: cabal_macros.h
csvtopl/.stack-work/ghci/481a366e/: cabal_macros.h
csvtopl/.stack-work/ghci/bf3fa6f6/: cabal_macros.h
csvtopl/.stack-work/ghci/c831ab53/: cabal_macros.h
csvtopl/.stack-work/ghci/dc40442d/: cabal_macros.h
csvtopl/.stack-work/ghci/fac1e99b/: cabal_macros.h
csvtopl/docs/: paragens.xlsx
csvtopl/src/: Main.hs  Main_adj.hs
