name:                csvtopl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/csvtopl#readme
license:             BSD3
license-file:        LICENSE
author:              Kaixi
maintainer:          jorgejg575926@gmail.com
copyright:           2020 Kaixi
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable csvtopl_paragem
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xlsx
                     , bytestring
                     , lens
                     , containers
                     , text

executable csvtopl_adj
  hs-source-dirs:      src
  main-is:             Main_adj.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xlsx
                     , bytestring
                     , lens
                     , containers
                     , text
